@@ -1,3 +1,8 @@
+2006-03-20  Gabor Csardi  <csardi@cool100.rmki.kfki.hu>
+
+	* interfaces/R/src/rinterface.c (R_igraph_interrupt_handler) :
+	free memory before returning after interruption for unix systems
+
 2006-03-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/motifs.R (graph.motifs.no) : added
